--- a/index.html
+++ b/index.html
@@ -1,30 +1,3 @@
-<!-- <!DOCTYPE html> -->
-<!-- <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-Do List with Categories</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-        <h1>To-Do List with Categories</h1>
-        <input type="text" id="taskInput" placeholder="Add new task">
-        <select id="categoryInput">
-            <option value="shopping">Shopping</option>
-            <option value="chores">Chores</option>
-            <option value="work">Work</option>
-            <!-- Add more categories as needed -->
-        <!-- </select> -->
-        <!-- <button onclick="addTask()">Add Task</button>
-        <ul id="taskList"></ul>
-    </div>
-    <script src="app.js"></script>
-</body>
-</html> --> -->
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -35,8 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>To-Do List</h1>
+        <h1> To-Do List</h1>
         <input type="text" id="taskInput" placeholder="Add New Task">
+        <input type="date" id="dueDateInput">
         <button onclick="addTask()">Add Task</button>
         <ul id="taskList"></ul>
     </div>
